# shellfleet

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLA.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile.agent  Dockerfile.agent.k8s  Dockerfile.agent.ubuntu-x86_64  Dockerfile.server  Dockerfile.web  INSTALL.md  README.md  build-ubuntu-agent.sh  docker-compose.yml  index.html  metrics.example.yaml  next.config.ts  package-lock.json  package.json  shellfleet-agent.service  sys-manager-agent.service  sys-manager.gpg  sys-manager.nginx.conf
.github/: dependabot.yml
.github/workflows/: agent-deb.yml  agent-k8s-image.yml  ci.yml  container-images.yml  harbor-images.yml
agent/: Cargo.toml
agent/.github/: dependabot.yml
agent/debian/: postinst  prerm  shellfleet-agent-pair  shellfleet-approval-gate.service  shellfleet-docker-proxy.service
agent/src/: apt.rs  backup.rs  docker.rs  health.rs  journal.rs  k8s_exec.rs  k8s_logs.rs  logs.rs  main.rs  stats.rs  terminal.rs
agent/tests/: package_security.sh
cli/: .gitignore  Cargo.toml  README.md
cli/.github/workflows/: ci.yml  release.yml
cli/src/: app.rs  client.rs  credentials.rs  fleet.rs  identity.rs  main.rs  session.rs  ui.rs
contracts/: enterprise-extension-v1.json
debian/: env.example  postinst  postrm  shellfleet-agent.service  shellfleet-docker-proxy  shellfleet-docker-proxy.socket  sys-manager-agent.service
debian/apparmor/: shellfleet-agent  shellfleet-docker-proxy
debian/probes.d/: disk-usage.sh  docker-running.sh  load-average.sh  swarm-pending.sh
dists/stable/: InRelease  Release  Release.gpg
docker/: server-entrypoint.sh
docs/: CLOUDFLARE.md  HELM.md  KUBERNETES.md  METRICS.md  QUICKSTART.md  WEBHOOKS.md
helm/shellfleet-agent/: .helmignore  Chart.yaml  README.md  values.yaml
helm/sys-manager-agent/: Chart.yaml  README.md  values.yaml
pool/main/: sys-manager-agent-k8s_1.1.0-ci202604280303.gd0c2ea4_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280303.gd0c2ea4_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280311.g8d70dc3_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280311.g8d70dc3_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280329.g9decfb2_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280329.g9decfb2_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280339.ga2201f5_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280339.ga2201f5_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280350.g7d2c86c_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280350.g7d2c86c_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280358.g35ae993_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280358.g35ae993_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280409.g2c874a9_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280409.g2c874a9_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280754.g67ae791_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280754.g67ae791_arm64.deb  sys-manager-agent-k8s_1.1.0-ci202604280756.g42e0458_amd64.deb  sys-manager-agent-k8s_1.1.0-ci202604280756.g42e0458_arm64.deb  sys-manager-agent_0.1.0-ci202604250449.gb5a03ce_amd64.deb  sys-manager-agent_0.1.0-ci202604250458.g78c85c0_amd64.deb  sys-manager-agent_1.1.0-ci202604250503.gef58543_amd64.deb  sys-manager-agent_1.1.0-ci202604250551.g339d19e_amd64.deb  sys-manager-agent_1.1.0-ci202604250557.gaf8edb6_amd64.deb  sys-manager-agent_1.1.0-ci202604250607.g4b7de7f_amd64.deb  sys-manager-agent_1.1.0-ci202604250622.g6f41879_amd64.deb  sys-manager-agent_1.1.0-ci202604251124.g5a2a481_amd64.deb  sys-manager-agent_1.1.0-ci202604251145.g4abf4db_amd64.deb  sys-manager-agent_1.1.0-ci202604251253.g0e1344e_amd64.deb  sys-manager-agent_1.1.0-ci202604251315.g7ca5951_amd64.deb  sys-manager-agent_1.1.0-ci202604251319.g875a082_amd64.deb  sys-manager-agent_1.1.0-ci202604251422.ga54abbb_amd64.deb  sys-manager-agent_1.1.0-ci202604251444.g2c27cbc_arm64.deb  sys-manager-agent_1.1.0-ci202604251445.g2c27cbc_amd64.deb  sys-manager-agent_1.1.0-ci202604251447.g2c27cbc_amd64.deb  sys-manager-agent_1.1.0-ci202604251447.g2c27cbc_arm64.deb  sys-manager-agent_1.1.0-ci202604251529.gd4b1bf7_amd64.deb  sys-manager-agent_1.1.0-ci202604251529.gd4b1bf7_arm64.deb  sys-manager-agent_1.1.0-ci202604251530.ge3b11ca_amd64.deb  sys-manager-agent_1.1.0-ci202604251530.ge3b11ca_arm64.deb  sys-manager-agent_1.1.0-ci202604251537.g0a9a1a6_amd64.deb  (+43 more)
server/: Cargo.toml
server/src/: auth.rs  backups.rs  cli_auth.rs  crypto.rs  csrf.rs  db.rs  fan_out.rs  health.rs  labels.rs  main.rs  metrics.rs  mfa.rs  notifications.rs  passkey_mfa.rs  rbac.rs  telemetry.rs  tls.rs  tokens.rs  update_windows.rs
shared/: Cargo.toml
shared/.github/: dependabot.yml
shared/src/: fleet.rs  lib.rs  security.rs  trusted.rs
src/: anon_limiter.rs  apt.rs  auth.rs  backup.rs  backups.rs  client.rs  config.rs  credentials.rs  db.rs  deploy.rs  device_auth.rs  docker.rs  exec.rs  health.rs  internal_auth.rs  journal.rs  journal_stream.rs  k8s.rs  k8s_exec.rs  k8s_logs.rs  lib.rs  logs.rs  main.rs  mfa.rs  notifications.rs  rbac.rs  security.rs  security_headers.rs  stats.rs  systemd.rs  terminal.rs  throttle.rs  update_windows.rs  users.rs  webhook.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AgentLabels.tsx  AgentList.tsx  AiAnalysis.tsx  ApiKeyCreateForm.tsx  AptManager.tsx  Backups.tsx  CommandPalette.tsx  ConfigEditor.tsx  ContainerExecModal.tsx  ContainerImages.tsx  ContainerNetworks.tsx  ContainerStats.tsx  ContainerVolumes.tsx  Containers.tsx  Deploy.tsx  EeUpsell.tsx  FleetOverview.tsx  HealthProbes.tsx  JournalStream.tsx  KubernetesHub.tsx  LogViewer.tsx  Metrics.tsx  MetricsPanelForm.tsx  SeriesChart.tsx  ServiceList.tsx  SwarmServiceDrawer.tsx  SwarmStacks.tsx  SystemPrune.tsx  SystemStats.tsx  Terminal.tsx  UpdateWindowPanel.tsx
src/lib/: api.ts  apiKeys.ts  eeFeatures.ts  metricsClient.ts  types.ts  useEeFeatures.ts
src/privileged/: approval.rs  client.rs  crypto.rs  framing.rs  peer.rs  policy.rs
tests/: package_security.sh
tests/journey/: agent-token.txt  docker-compose.yml  fleet-read-plane.spec.ts  nginx.conf  (+1 more)
web/: next.config.ts  package-lock.json  package.json
(+90 files in other folders)
