[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sppidy/shellfleet-shared"
description = "Shared protocol/types crate for ShellFleet (server, agent, web)."

[dependencies]
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
zeroize = "1.8"
