[package]
name = "shellfleet-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Trusted ShellFleet Operator Cockpit"
repository = "https://github.com/sppidy/shellfleet"
homepage = "https://github.com/sppidy/shellfleet"
publish = false

[[bin]]
name = "shellfleet"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
crossterm = "0.29"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
hkdf = "0.12"
rand = "0.8"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shared = { path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
