[package]
name = "shellfleet-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Trusted ShellFleet Operator Cockpit"
repository = "https://github.com/sppidy/shellfleet"
homepage = "https://github.com/sppidy/shellfleet"
publish = false

[[bin]]
name = "shellfleet"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
